logs/demonhunter.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/demonhunter'...
Listing './lib/python3.5/site-packages/demonhunter/core'...
Listing './lib/python3.5/site-packages/demonhunter/core/loggers'...
Listing './lib/python3.5/site-packages/demonhunter/core/model'...
Compiling './lib/python3.5/site-packages/demonhunter/core/model/__init__.py'...
***   File "./lib/python3.5/site-packages/demonhunter/core/model/__init__.py", line 8
    self.type =
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/demonhunter/nodes'...
Listing './lib/python3.5/site-packages/demonhunter/nodes/honeypots'...
Listing './lib/python3.5/site-packages/demonhunter/nodes/honeypots/http'...
Listing './lib/python3.5/site-packages/demonhunter/nodes/honeypots/http/apache'...
Listing './lib/python3.5/site-packages/demonhunter/nodes/honeypots/http/nginx'...
Listing './lib/python3.5/site-packages/demonhunter/nodes/honeypots/telnet'...
Listing './lib/python3.5/site-packages/demonhunter/nodes/honeypots/vnc'...
Listing './lib/python3.5/site-packages/demonhunter/nodes/manager'...
Listing './lib/python3.5/site-packages/demonhunter/nodes/manager/agent'...
Listing './lib/python3.5/site-packages/demonhunter-1.1.7.egg-info'...
Listing './lib/python3.5/site-packages/httptools'...
Listing './lib/python3.5/site-packages/httptools/parser'...
Listing './lib/python3.5/site-packages/httptools-0.0.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
